cleanup of spectrum, lots of CSS

--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -8,79 +8,75 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
+
 		<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%>"> <%= comparison.get("title") %></p>
 		<hr class="bg<%=comparison.get("color1")%>" style="height:3px"/>
 		<p class="franklinBookComp <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
 		<div class="backgroundGradient"></div>
 		
-		<% 	var val0 = comparison.get("traits")[0].vals[0]; 
-				var val1 = comparison.get("traits")[0].vals[1]; 
-				var totalBarH = 450; 
-				var totalH = 600;
-				var range = [comparison.get("range")[0], comparison.get("range")[1]];
+		<% 	
+			var val0 = comparison.get("traits")[0].vals[0]; 
+			var val1 = comparison.get("traits")[0].vals[1]; 
+			var totalBarH = 450; 
+			var totalH = 600;
+			var range = [comparison.get("range")[0], comparison.get("range")[1]];
+			var str = comparison.get("title");
 				
-				function mapVal(val) {
-					var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
-					var t = totalH-h;
-					return [h,t];
-				}			
-				
-				%>
+			function mapVal(val) {
+			
+				if (val < range[0]/100.0) val = range[0]/100.0;
+				if (val > range[1]/100.0) val = range[1]/100.0;
+				var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
+				var t = totalH-h;
+				return [h, t];
+			
+			}				
+			
+		%>
 
 		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
-			<p class="franklinMedCompIt barGraphText white" > Obama </p>  <p class="franklinMedComp barGraphValue" > <%=  Math.round(10000.0*val0)/100.0 %> </p> </div>
+			<p class="franklinMedCompIt barGraphText white" > Obama </p>  <p class="franklinMedComp barGraphValue" > <%= (Math.round(10000.0*val0)/100.0).toFixed(2) %>% </p> </div>
 		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
-			<p class="franklinMedCompIt barGraphText white" > Romney </p>  <p class="franklinMedComp barGraphValue" > <%=  Math.round(10000.0*val1)/100.0 %>  </p> </div>
-		
-		
+			<p class="franklinMedCompIt barGraphText white" > Romney </p>  <p class="franklinMedComp barGraphValue" > <%= (Math.round(10000.0*val1)/100.0).toFixed(2) %>%  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ %>
 
 			<% if (trait.name == "posemo") { %> 
 				
 				<% var people = ["Palin 2008", "Obama 2008", "Kerry 2004", "Nixon 1960"];
-				var values = [4.18, 3.58, 2.88, 1.94]; 
-				var pos = ["comparisonPastCandidateRight", "comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight"];
-				var pos2 = ["Right", "", "", "Right"];			
+				var values = [4.18, 3.58, 2.88, 1.94]; 		
 				%>
 				
 			<% } else if (trait.name == "negemo") {%>
 			
 				<% var people = ["Bush 2000", "Obama 2008", "McCain 2008","Bush 2004"];
 				var values = [1.02, 1.48, 2.39, 3.23]; 
-				var pos = ["comparisonPastCandidateRight", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidateRight"];
-				var pos2 = ["Right", "", "Right", "Right" ];
 				%>
 				
 			<% } else if (trait.name == "anger") {%>
 			
 				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
-				var values = [0.32, 0.58, 0.97, 1.60]; 
-				var pos = ["comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidate" ];
-				var pos2 = ["", "", "Right", "" ];				
+				var values = [0.32, 0.58, 0.97, 1.60]; 			
 				%>
 			
 			<% } else if (trait.name == "funct") {%>
 			
-				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
-				var pos = ["comparisonPastCandidate", "comparisonPastCandidate", "comparisonPastCandidateRight", "comparisonPastCandidate" ];
-				var pos2 = ["", "", "Right", "" ];						
+				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];					
 				var values = [20, 30, 40, 50]; %>
 			
 			<% } %>
 			
 				<% for (var i = 0; i < 4 ; i++) { %>
 				
-					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
+					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] -24%>px"> 
 					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue"> <%=people[i]%> </p>
 					<hr class="span-6 bgGrayBlue" style="z-index:-1;" /> 
-					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%> </p> 
+					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%>% </p> 
 					</div>
 			
 				<% } %>
 			
 		<% }); %>
-
 
 </div>
 
