--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -8,26 +8,30 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedCompIt spectrumTitle <%=comparison.get("color1").toLowerCase()%>"> <%= comparison.get("title") %></p>
+		<p class="franklinMedCompIt spectrumTitle " style="color:rgb(<%=comparison.get("color1")[0]%>, <%=comparison.get("color1")[1]%>, <%=comparison.get("color1")[2]%>);"> <%= comparison.get("title") %></p>
 		<!-- <hr class="bgPurple" style="height:3px"/> -->
-		<div class = "spectrumPush-3 spectrumGradientPurpleRed" style="height:450px; width:3px; position:relative; "></div>
+		<div class = "spectrumPush-3 <%=comparison.get("gradient")%>" style="height:450px; width:3px; position:relative; z-index:1;"></div>
 
 		<%  var val0 = comparison.get("traits")[0].vals[0]; 
 			var val1 = comparison.get("traits")[0].vals[1]; 
 			var totalBarH = 450; 
 			var totalH = 600;
 			var range = [comparison.get("range")[0], comparison.get("range")[1]];
-  			var purple = [101, 45, 106];
-  			var redOrange = [255, 66, 55];
+  		var colorExtreme1 = comparison.get("color1");
+  		var colorExtreme2 = comparison.get("color2");
 			
-			function mapVal(val) {
+			function mapVal(val, bound) {
+			
+				if (bound && (val < range[0]/100.0)) val = range[0]/100.0;
+				if (bound && (range[1]/100.0 < val)) val = range[1]/100.0;
+							
 				var h = totalBarH*(100*val-range[0])/(range[1]-range[0]);
 				var t = totalH-h;
 				return [h,t];
 			}
 			function mapColor(val, channel) {
 				var val_n = (100.0*val - range[0])/(range[1] - range[0]);
-				var color = parseInt(val_n*purple[channel] + (1.0-val_n)*redOrange[channel]);
+				var color = parseInt(val_n*colorExtreme1[channel] + (1.0-val_n)*colorExtreme2[channel]);
 				return color;
 			}
 			var col0 = [mapColor(val0,0), mapColor(val0,1), mapColor(val0,2)];
@@ -35,13 +39,15 @@
 			
 		%>
 
-		<div class="spectrumPointer push-0 span-2" style="top:<%= mapVal(val0)[1] - 50%>px; background-color:rgb(<%=col0[0]%>, <%=col0[1]%>, <%=col0[2]%>);" >
-		<hr class="spectrumDottedLine span-3" style="background-color:rgb(<%=col0[0]%>, <%=col0[1]%>, <%=col0[2]%>);"/>
-		<p class="franklinMedCompIt spectrumText" > Obama </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val0)/100 %> </p> </div>
+		<div class="spectrumPointer push-0 span-3" style="top:<%= mapVal(val0, true)[1] - 50%>px;" >
+		<p class="franklinMedCompIt spectrumObama" > Obama </span>  
+		<hr class="spectrumLine span-3" style="background-color:rgb(<%=col0[0]%>, <%=col0[1]%>, <%=col0[2]%>);"/>
+		<p class="franklinMedComp spectrumValue" > <%=  (Math.round(10000*val0)/100).toFixed(2) %> </p> </div>
 	
-		<div class="spectrumPointer push-4 span-2" style="top:<%= mapVal(val1)[1] - 50%>px; background-color:rgb(<%=col1[0]%>, <%=col1[1]%>, <%=col1[2]%>);" >
-		<hr class="spectrumDottedLine spectrumDottedLineRight span-2" style = "background-color:rgb(<%=col1[0]%>, <%=col1[1]%>, <%=col1[2]%>);"/>
-		<p class="franklinMedCompIt spectrumText" > Romney </p>  <p class="franklinMedComp spectrumValue" > <%=  Math.round(10000*val1)/100 %>  </p> </div>
+		<div class="spectrumPointer spectrumPush-3 span-3" style="top:<%= mapVal(val1, true)[1] - 50%>px;" >
+		<p class="franklinMedCompIt spectrumRomney" > Romney </p> 
+		<hr class="spectrumLine span-3" style = "background-color:rgb(<%=col1[0]%>, <%=col1[1]%>, <%=col1[2]%>);"/>
+	  <p class="franklinMedComp spectrumValueRight" > <%=  (Math.round(10000*val1)/100).toFixed(2) %>  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ 
 		
@@ -67,25 +73,31 @@
 					var repub = "spectrumPush-3"; 
 					var dem = "push-2";
 					var xpos = "";
-					
+					var justify = "";
+					var justify2 = "";	
+									
 				    if (i%2 == 0) {
 				       xpos = repub;  
-				       
+				       justify = "comparisonPastCandidateRight";
+				       justify2 = "comparisonPastValueRight";
+				       				       
 			        } else {
 				       xpos = dem;  
+				       justify = "comparisonPastCandidate";
+				       justify2 = "comparisonPastValue";
 				    }
 				    %>
 				
-					<div class="spectrumLineContainer <%=xpos%>" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate grayBlue" > <%=people[i] %></p>
+					<div class="spectrumLineContainer span-1 <%=xpos%>" style="top:<%= mapVal(values[i]/100.0, false)[1] -24 %>px"> 
+					<p class="franklinDemiCompIt <%=justify%> grayBlue" > <%=people[i] %></p>
 					<hr class="span-1 bgGrayBlue" /> 
-					<p class="franklinDemiComp comparisonPastValue" > <%=values[i]%> </p> 
+					<p class="franklinDemiComp <%=justify2%>" > <%=values[i]%> </p> 
 					</div>
 			
 				<% } %>
 			
 		<% }); %>
-		<p class="franklinMedCompIt spectrumTitle <%=comparison.get("color2").toLowerCase()%>" style="top:-20px"><%= comparison.get("subtitle") %></p>
+		<p class="franklinMedCompIt spectrumTitle" style="top:-20px; color:rgb(<%=comparison.get("color2")[0]%>, <%=comparison.get("color2")[1]%>, <%=comparison.get("color2")[2]%>);"> <%= comparison.get("subtitle") %></p>
 
 </div>
 
