--- a/assets/css/compare.css
+++ b/assets/css/compare.css
@@ -89,50 +89,41 @@ height:1200px;
 .comparisonLineContainer {
 	position:absolute;
 	height: 50px;
-	/*width: 160px;*/
-	/*margin:0 -80px 1.5em 80px;*/
-	float:left;
 }
 
-
-
 .comparisonPastCandidate {
-	position:absolute;
+	position:relative;
 	font-size: 24px;
-	line-height; 24px;
-	width: 300px;
-	height: 10px;
+	line-height: 24px;
 	margin: 0 0 0 0;
-	top: -24px;	
 	left: 6px;
+
 }
 
 .comparisonPastCandidateRight {
-	position:absolute;
+	position:relative;
+	text-align: right;		
 	font-size: 24px;
-	text-align: right;	
 	line-height: 24px;
-	width: 936px;
-	margin: 0 6px 0 -6px;
-	top: -24px;	
+	margin: 0 0 0 0;	
+	right: 6px;	
 }
 
 .comparisonPastValue {
-	position:absolute;
+	position:relative;
 	font-size: 18px;
-    color:white;
-	height: 10px;
 	margin: 0 0 0 0;
 	left: 6px;	
+	color: white;
 }
 
 .comparisonPastValueRight {
-	position:absolute;
+	position:relative;
 	font-size: 18px;
 	text-align: right;
-    color:white;
-	width: 936px;
-	margin: 0 6px 0 -6px;
+	right: 6px;
+	margin: 0 0 0 0;
+  color: white;	
 }
 
 .comparisonBarGraph {
@@ -167,6 +158,7 @@ height:1200px;
 	border-bottom-style: solid;
 	margin: 0 0 0 0;
 	line-height:48px;
+	z-index: 2;
 	
 }
 
@@ -180,10 +172,10 @@ height:1200px;
 
 .spectrumTitle {
 
-	position:relative;
+	position: relative;
+	text-align : center;
 	font-size: 128px;
-	margin: 0px -160px 0px 160px;
-	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	line-height:128px;
 
 }
@@ -215,13 +207,13 @@ height:1200px;
 .gradientDisposition {
 
 	background: rgb(232,12,122); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(232,12,122,1) 0%, rgba(122,52,64,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,12,122,1)), color-stop(100%,rgba(122,52,64,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(232,12,122,1) 0%,rgba(122,52,64,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(232,12,122,1) 0%,rgba(122,52,64,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(232,12,122,1) 0%,rgba(122,52,64,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(232,12,122,1) 0%,rgba(122,52,64,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e80c7a', endColorstr='#7a3440',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top, rgba(122,52,64,1) 0%, rgba(232,12,122,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(122,52,64,1)), color-stop(100%,rgba(232,12,122,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(122,52,64,1) 0%,rgba(232,12,122,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(122,52,64,1) 0%,rgba(232,12,122,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(122,52,64,1) 0%,rgba(232,12,122,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(122,52,64,1) 0%,rgba(232,12,122,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a3440', endColorstr='#e80c7a',GradientType=0 ); /* IE6-9 */
 }
 
 .spectrumPointer {
@@ -229,65 +221,75 @@ height:1200px;
 	position: absolute;
 }
 
-.spectrumDottedLine {
+.spectrumPointerImage {
+	position: absolute;
+	height: 100px;
+  image-src: url("../../images/pointer.png");
+}
+
+.spectrumLine {
 	height:3px; 
 	top:50px; 
-	position:relative;
-}
-
-.spectrumDottedLineRight {
-	left: -184px;
-}
-
-.spectrumText {
 	position:absolute;
-	font-size: 48px;
-	left: 10px;
-	bottom: -5px;
-	/*text-decoration: underline;
-	border-bottom-style: solid;*/
-	line-height:48px;
-	color: white;
-
-}
-
-.spectrumTextRight {
-	position:absolute;
-	text-align: right;	
-	font-size: 48px;
-	left: 10px;
-	bottom: -5px;
-	/*text-decoration: underline;
-	border-bottom-style: solid;*/
-	line-height:48px;
-	color: white;
-
-}
-
-.spectrumValue {
-	position:absolute;
-	font-size: 32px;
-	left: 10px;
-	bottom: -18px;
-	line-height:24px;
-	color: white;
-}
-
-.spectrumValueRight {
-	position:absolute;
-	text-align: right;		
-	font-size: 32px;
-	left: 10px;
-	bottom: -18px;
-	line-height:24px;
-	color: white;
 }
 
 .spectrumLineContainer {
 	position:absolute;
 	height: 50px;
-	float:left;
 }
+
+
+.spectrumObama {
+	position:relative;
+	font-size: 48px;
+	margin: 0 0 0 0;	
+	left: 10px;
+	/*text-decoration: underline;
+	border-bottom-style: solid;*/
+	line-height:48px;
+	color: white;
+
+}
+
+.spectrumRomney {
+	position:relative;
+	text-align: right;	
+	font-size: 48px;
+	right: 10px;
+	margin: 0 0 0 0;
+	/*text-decoration: underline;
+	border-bottom-style: solid;*/
+	line-height:48px;
+	color: white;
+
+}
+
+
+.spectrumValue {
+
+	position: relative;
+	font-size: 32px;
+	left: 10px;
+	line-height:48px;
+	margin: 0 0 0 0;	
+	color: white;
+
+	
+}
+
+.spectrumValueRight {
+
+	position: relative;
+	text-align: right;		
+	font-size: 32px;
+	right: 10px;
+	line-height:48px;
+	margin: 0 0 0 0;	
+	color: white;
+
+	
+}
+
 
 .spectrumPush-3 {
 	margin:0 -456px 1.5em 456px;
