--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -84,9 +84,12 @@ body {
 	left: 0px;	/* account for perspective */
 	font-size: 400px;
 	line-height: 336px;
-	font-family:"ff-meta-serif-web-pro"; 
-	font-weight:700; 
-	font-style:italic; 
+	/*font-family:"ff-meta-serif-web-pro"; */
+	/*font-weight:700; */
+	/*font-style:italic; */
+	
+	/*font-family:"franklin-gothic-urw-comp-i7", "franklin-gothic-urw-comp"; font-weight:700; font-style:italic;*/
+	font-family:"franklin-gothic-urw-i7", "franklin-gothic-urw"; font-weight:700; font-style:italic;
 	
 	/* color: rgb(146,152,152); */
 	color: rgb(150,156,156);
@@ -335,6 +338,7 @@ hr {
 /*.gray60{ color:rgb(60,60,60); }*/
 
 .gray80{ color:rgb(80,80,80); }
+.bgGray80{ background-color:rgb(80,80,80);}
 .gray160{ color:rgb(160,160,160); }
 .grayBlue{ color:rgb(67,67,75); }
 .bgGrayBlue{ background-color:rgb(77,77,85); }
@@ -844,11 +848,11 @@ landingTitleImage {
 
 .emoTextSmall {
   position: absolute;
-  font-size: 36px;
+  font-size: 72px;
   line-height: 0.75em;
   visibility: hidden;
   opacity: 0;
-  z-index: 1;
+  z-index: -2;
   -webkit-transition: opacity 1s;
 }
 
@@ -901,8 +905,8 @@ landingTitleImage {
 #transcript .freqWordCount {
   position: relative;
   top: 1em;
-  /* color: rgb(207,255,36); */
-  color: white;
+  color: rgb(207,255,36); 
+  /*color: white;*/
 }
 #transcript .freqWordUnderline {
   position: absolute;
