--- a/app/templates/overlays/emoburst.html
+++ b/app/templates/overlays/emoburst.html
@@ -1,5 +1,5 @@
 <div class="container <%= type %>">
   <!-- populated with random +/-'s (class='emoSign') by overlay -->
   <div class="franklinDemiComp sentimentClick emoTextBig" style="left: <%=  speaker==1 ? gridColumns[3] : gridColumns[0] %>px; top: <%= posY %>px"><%= type=='posemo' ? 'POSITIVE' : 'NEGATIVE' %><br />BURST</div>
-  <div class="franklinDemiComp sentimentClick emoTextSmall" style="left: <%= speaker==1 ? gridColumns[5] : gridColumns[1] %>px; top: <%= posY %>px"><%= type=='posemo' ? 'POSITIVE' : 'NEGATIVE' %><br />BURST</div>
+  <div class="franklinDemiComp sentimentClick emoTextSmall" style="left: <%= speaker==1 ? gridColumns[5] : gridColumns[1] %>px; top: <%= posY %>px" data-top-bottom="margin-top:-90px;" data-bottom-top="margin-top:90px;"><%= type=='posemo' ? 'POSITIVE' : 'NEGATIVE' %><br />BURST</div>
 </div> 
