--- a/app/templates/overlays/category.html
+++ b/app/templates/overlays/category.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="catWrapper">
-  	<div class="franklinDemiCompIt <%= category %>Markup reverse categoryOverlay" ><%= title %></div>
-  	<div class="franklinDemiCompIt <%= category %>Markup reverse categoryOverlay overlay-bottom" >Words</div>
+  	<div class="franklinDemiCompIt push-1 <%= category %>Markup reverse categoryOverlay" ><%= title %></div>
+  	<div class="franklinDemiCompIt push-1 <%= category %>Markup reverse categoryOverlay overlay-bottom" >Words</div>
   <div class="catWrapper">
 </div> 
