--- a/app/templates/overlays/numbers.html
+++ b/app/templates/overlays/numbers.html
@@ -2,6 +2,6 @@
 	<% if(speaker==1) { // Obama %>
     <div class="franklinExDemiComp numberPhrase gray80 numbersClick" style="left: -1024px; top:<%= posY %>px;" data-top-bottom="margin-top:-60px;" data--300-bottom-bottom="margin-left:0px;" data-bottom-top="margin-left:200px; margin-top:60px;" ><%=$.trim(phrase)%></div>
 	<% }else{ %>
-    <div class="franklinExDemiComp numberPhrase gray80 numbersClick" style="left: 2048px; text-align: left; top:<%= posY %>px;" data-top-bottom="margin-top:-60px;" data--300-bottom-bottom="margin-left:0px;" data-bottom-top="margin-left:-200px; margin-top:60px;"><%=$.trim(phrase)%></div> 
+    <div class="franklinExDemiComp numberPhrase gray80 numbersClick" style="left: 2048px; text-align: right; top:<%= posY %>px;" data-top-bottom="margin-top:-60px;" data--300-bottom-bottom="margin-left:0px;" data-bottom-top="margin-left:-200px; margin-top:60px;"><%=$.trim(phrase)%></div> 
 	<% } %>
 </div>
