fixing wording of little things

--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -39,11 +39,11 @@
 						
 		%>
 		
-		<div class = "push-0" style="top: <%= mapVal(val0)[1]/2.0%>px; position:absolute;" >
-		<p class="franklinDemiCompIt countCandidate white" data-500="color:rgb(255,255,255);" data-1000="color:rgb(0,0,0);"> Obama </p>
+		<div class = "push-0" style="top: <%= mapVal(val0)[1]/2.0 + 50%>px; position:absolute; z-index:3;" >
+		<p class="franklinDemiCompIt countCandidate white"> Obama </p>
 		<p class="franklinDemiComp countBigNumber " > <%=  addCommas(val0) %> </p> </div>
 		
-		<div class = "push-4" style="top: <%= mapVal(val1)[1]/2.0%>px; position:absolute;">
+		<div class = "push-4" style="top: <%= mapVal(val1)[1]/2.0 + 50%>px; position:absolute;  z-index:3;">
 		<p class="franklinDemiCompIt countCandidate white" > Romney </p> 
 		<p class="franklinDemiComp countBigNumber" > <%=  addCommas(val1) %>  </p> </div>
 
