comparison parallax core in place

--- a/app/templates/comparison/list.html
+++ b/app/templates/comparison/list.html
@@ -1,4 +1,4 @@
-<div class="compareContainer list">
+<div class="compareContainer list" data-<%= (scrollY-scrollDet-scrollD) %>="top:100%;" data-<%= (scrollY-scrollDet) %>="top:0%;" data-<%= (scrollY+scrollDet) %>="top:0%;" data-<%= (scrollY+scrollDet+scrollD) %>="top:-300%;">
 
 		
 	<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%> " comparisonExpText"> <%= comparison.get("title") %> </p>
