--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -184,15 +184,24 @@ p { /* Transcript text */
   transform: scale(1);*/
   opacity: 1.0 !important;
 }
-
+ 
 #comparisons .wrapper {
   -webkit-transition:  1s linear; 
   transition:  1s linear; 
   opacity: 0 !important;
   position: fixed;
+  
   /*-webkit-transform: scale(0);
   transform: scale(0);*/
+}
 
+/* For skrollr purposes */
+.comparisonFiller {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 1024px;
+	height: 30000px;	/* This should match the total height of all comparisons, aka the final value of Comparison.Views.All.scrollY. */
 }
 
 .pieChart {
@@ -238,6 +247,7 @@ hr {
 #navTimeline {
   width: 530px;
   height: 16px;
+  z-index:12;
 }
 #navProgressBar {
   height: 16px;
@@ -263,6 +273,7 @@ hr {
   width: 530px;
 	height: 32px;
 	background-color: white;
+	z-index:12;
 }
 
 .navTitle {
@@ -687,6 +698,7 @@ landingTitleImage {
 	-webkit-transform: translateZ(0px);	*/
   z-index: 10;
   text-transform: uppercase;
+  -webkit-transition: margin-left 1s, margin 1s;
 }
 
 .certainMarkup:hover{
