--- a/assets/css/compare.css
+++ b/assets/css/compare.css
@@ -25,7 +25,9 @@ z-index:-2;
 
 .compareContainer {
 	
-	position:relative; 
+	/* position:relative; */
+	position: fixed;
+	top: 100%;
 	
 	border-bottom: 3px gray !important;
 	padding-bottom: 50px !important;
