--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -218,12 +218,15 @@ hr {
 }
 
 /* Navigation */
-
 #navigation {
+	width: 100%;
+}
+
+#navLeft {
 	position: fixed;
 	width: 530px;
 	height: 48px;
-	z-index: 10;
+	z-index:6000;
 
 	transform:rotate(90deg);
 	-ms-transform:rotate(90deg); /* IE 9 */
@@ -237,6 +240,22 @@ hr {
   top: 245px;
 }
 
+#navRight {
+	position: relative;
+	height: 48px;
+	z-index:6000;
+
+	transform:rotate(90deg);
+	-ms-transform:rotate(90deg); /* IE 9 */
+	-moz-transform:rotate(90deg); /* Firefox */
+	-webkit-transform:rotate(90deg); /* Safari and Chrome */
+	-o-transform:rotate(90deg); /* Opera */
+	
+	-webkit-transition: -webkit-transform 1s;	
+	
+  top: 545px;
+  float: right;
+}
 
 /* White box inside #navigation div */
 #navTimeline {
@@ -284,6 +303,17 @@ hr {
 
 .navSubTitle:hover {
 	/*color: rgb(64, 180, 230)*/
+}
+
+.navButton {
+	color:black;
+	background:white;
+}
+
+.navButton:hover {
+	cursor:pointer;
+	background:black;
+	color:white;
 }
 
  
