Tuned trait overlay

--- a/app/templates/overlays/trait.html
+++ b/app/templates/overlays/trait.html
@@ -1,12 +1,12 @@
 <div class="container">
-<% if(leader=="obama") { %>
-	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 2*96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= leader.toUpperCase() %> IS NOW </p></div>
+<% if(speaker=="obama") { %>
+	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 2*96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= speaker.toUpperCase() %> IS NOW </p></div>
 	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= moreVal %><%= trait %> <p></div>
 	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white">THAN <%= trailer.toUpperCase() %> </p></div>
 	<div class="franklinDemiComp traitSymbolLeft orangeRed traitClick" style="top:<%= startPosY %>px;"><%= aVal %></div>
 <% }else{ %>
-	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 2*96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= leader.toUpperCase() %> IS NOW</p></div>
-	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white">MORE <%= trait %><p></div>
+	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 2*96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= speaker.toUpperCase() %> IS NOW</p></div>
+	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY - 96 %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white"><%= moreVal %><%= trait %><p></div>
 	<div class="traitExpTextHolder traitClick" style="top:<%= startPosY %>px;"><p class="franklinBookCompIt traitExpText bgOrangeRed white">THAN <%= trailer.toUpperCase() %></p></div>
 	<div class="franklinDemiComp traitSymbolRight orangeRed traitClick" style="top:<%= startPosY %>px;"><%= aVal %></div>
 <% } %>
