--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -570,6 +570,8 @@ landingTitleImage {
 .landingButtonHolder {
 	position: relative;	
   cursor: pointer;
+  overflow:hidden;
+  z-index: 10;
 }
 
 .landingButton {
