--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -19,3 +19,8 @@
 	  <div id="navComparisonButton" class="franklinDemiComp navButton gray60"> stats </div>
 	</div>
 </div>
+
+
+<div id="navInstructions">
+zomg these are the instructions!!!
+</div>
