--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -377,7 +377,18 @@ hr {
 	-o-transform:rotate(90deg); /* Opera */
 }
 
-
+#navInstructions {
+	font-size: 50px;
+	background-color: yellow;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	padding: 50px;
+	margin: 50px;
+	
+	-webkit-transition: -webkit-transform 1s;	
+	z-index: 5500;
+}
 
 
 
